crates/wac-parser/tests/parser/fail/empty-flags.wac
package test:comp;

flags f {}